RESOLVED FIXED135810
Web Inspector: console.profileEnd shouldn't stop frontend started timelines
https://bugs.webkit.org/show_bug.cgi?id=135810
Summary Web Inspector: console.profileEnd shouldn't stop frontend started timelines
Timothy Hatcher
Reported 2014-08-11 11:49:44 PDT
console.profile starts and stops the timeline recording, but it should not stop it if the timeline is already recording.
Attachments
Patch (4.43 KB, patch)
2014-08-11 11:52 PDT, Timothy Hatcher
no flags
Radar WebKit Bug Importer
Comment 1 2014-08-11 11:49:56 PDT
Timothy Hatcher
Comment 2 2014-08-11 11:52:55 PDT
Joseph Pecoraro
Comment 3 2014-08-11 12:30:29 PDT
Comment on attachment 236389 [details] Patch r=me
WebKit Commit Bot
Comment 4 2014-08-11 12:51:07 PDT
Comment on attachment 236389 [details] Patch Clearing flags on attachment: 236389 Committed r172404: <http://trac.webkit.org/changeset/172404>
WebKit Commit Bot
Comment 5 2014-08-11 12:51:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.