Web Inspector: console.profile shouldn't stop auto-recorded profiles https://bugs.webkit.org/show_bug.cgi?id=135810

Reviewed by Joseph Pecoraro.

* inspector/InspectorTimelineAgent.cpp:
(WebCore::InspectorTimelineAgent::start): Added. Call internalStart. Set m_enabledFromFrontend.
(WebCore::InspectorTimelineAgent::stop): Added. Calls internalStop. Clear m_enabledFromFrontend.
(WebCore::InspectorTimelineAgent::internalStart): Renamed from start.
(WebCore::InspectorTimelineAgent::internalStop): Renamed from stop.
(WebCore::InspectorTimelineAgent::startFromConsole): Use internalStart.
(WebCore::InspectorTimelineAgent::stopFromConsole): Use internalStop. Only stop if !m_enabledFromFrontend.
(WebCore::InspectorTimelineAgent::InspectorTimelineAgent): Initialize m_enabledFromFrontend.
* inspector/InspectorTimelineAgent.h: Added m_enabledFromFrontend.


Canonical link: https://commits.webkit.org/153684@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172404 268f45cc-cd09-0410-ab3c-d52691b4dbfc